test/tests/stages/11_long_integers/valid/extra_credit/compound_assign_to_long.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(main)
  (
  void
  )
  {
  long
  identifier(l)
  =
  -
  const long(34359738368l)
  ;
  int
  identifier(i)
  =
  -
  const int(10)
  ;
  identifier(l)
  -=
  identifier(i)
  ;
  if
  (
  identifier(l)
  !=
  -
  const long(34359738358l)
  )
  {
  return
  const int(1)
  ;
  }
  return
  const int(0)
  ;
  }
