test/tests/stages/11_long_integers/invalid_parse/bad_specifiers.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  long
  int
  identifier(i)
  =
  const int(0)
  ;
  return
  identifier(i)
  ;
  }
